@@ -98,7 +98,7 @@ class cmd_bundle_revisions(Command):
                             type=unicode)]
     takes_args = ['base?']
     aliases = ['bundle']
-    binary_stdout = True
+    encoding_type = 'exact'
 
     def run(self, base=None, revision=None, output=None, remember=False):
         from bzrlib import user_encoding
